--- a/index.html
+++ b/index.html
@@ -215,14 +215,14 @@
                     Мы ценим каждого клиента и предлагаем вам стать одним из них на очень выгодных условиях. 
                     Каждому, кто закажет доставку питание на неделю, будет предоставлена скидка в размере <span>20%!</span>
                     <br><br>
-                    Акция закончится 20 мая в 00:00
+                    Акция закончится 20 декабря в 00:00
                 </div>
             </div>
             <div class="promotion__timer">
                 <div class="title">Осталось до конца акции:</div>
                 <div class="timer">
                     <div class="timer__block">
-                        <span id="days">12</span>
+                        <span id="days">23</span>
                         дней
                     </div>
                     <div class="timer__block">
@@ -230,7 +230,7 @@
                         часов
                     </div>
                     <div class="timer__block">
-                        <span id="minutes">56</span>
+                        <span id="minutes">30</span>
                         минут
                     </div>
                     <div class="timer__block">
